# jwttool

./: .gitignore  Cargo.toml  README.md
src/: attack.rs  dictionary.rs  error.rs  jwt.rs  lib.rs  main.rs  recover.rs
tests/: cli.rs
