[package]
name = "jwttool"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
hmac = "0.13.0"
malachite = "0.9.2"
serde_json = { version = "1.0.150", features = ["preserve_order"] }
sha2 = "0.11.0"
# We'll add crates here one at a time, as we need them.
